--- a/package.json
+++ b/package.json
@@ -11,10 +11,21 @@
     "lib"
   ],
   "scripts": {
-    "compile": "tsc"
+    "compile": "tsc",
+    "lint": "eslint ."
   },
   "devDependencies": {
+    "@digabi/eslint-config": "^2.0.1",
     "@types/react": "^18.0.28",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "prettier": "^2.8.4",
     "react": "^18.2.0",
     "typescript": "^4.9.5",
     "webpack": "^5.75.0",
