--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,7 @@ on:
     branches: [master]
   schedule:
     - cron: '0 5 * * *'
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
