--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "lib"
   ],
   "scripts": {
-    "build": "tsc && webpack --config webpack.config.js",
+    "build": "tsc --project src && webpack --config webpack.config.js",
     "lint": "eslint ."
+  },
+  "peerDependencies": {
+    "react": "^17.0.2"
   },
   "devDependencies": {
     "@digabi/eslint-config": "^2.0.1",
+    "@digabi/typescript-config": "^1.0.0",
+    "@types/lodash": "^4.14.191",
     "@types/react": "^18.0.28",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
@@ -32,10 +37,14 @@
     "less-loader": "^11.1.0",
     "mini-css-extract-plugin": "^2.7.2",
     "prettier": "^2.8.4",
-    "react": "^18.2.0",
+    "react": "^17.0.2",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
+  },
+  "dependencies": {
+    "i18next": "^22.4.11",
+    "react-i18next": "^12.2.0"
   }
 }
