--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   ],
   "scripts": {
     "build": "tsc --project src",
+    "build:watch": "yarn build && tsc --project src -w --preserveWatchOutput",
     "lint": "eslint ."
   },
   "peerDependencies": {
@@ -43,7 +44,6 @@
     "prettier": "^2.8.4",
     "react": "^17.0.2",
     "react-i18next": "^12.2.0",
-    "ts-loader": "^9.4.2",
     "typescript": "^4.9.5"
   }
 }
