--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@digabi/ui-result-list",
-  "version": "1.2.0",
+  "version": "1.2.1-rc.0",
   "repository": "https://github.com/digabi/ui-result-list",
   "author": "Matriculation Examination Board, Finland",
   "license": "EUPL-1.1",
