--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,3 @@
 {
-  //"extends": "@digabi/typescript-config/public/tsconfig.json",
-   "compilerOptions": {
-     "target": "es6",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
-     "lib": ["es2021", "dom", "DOM.Iterable"],                                        /* Specify a set of bundled library declaration files that describe the target runtime environment. */
-     "jsx": "react",                                     /* Specify what JSX code is generated. */
-     "module": "es2022",                                /* Specify what module code is generated. */
-     "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
-     "declaration": true,                              /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
-     "declarationMap": true,                           /* Create sourcemaps for d.ts files. */
-     "sourceMap": true,                                /* Create source map files for emitted JavaScript files. */
-     "outDir": "lib",                                   /* Specify an output folder for all emitted files. */
-     "isolatedModules": true,                          /* Ensure that each file can be safely transpiled without relying on other imports. */
-     "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
-     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
-     "strict": true,                                      /* Enable all strict type-checking options. */
-   }
+  "extends": "@digabi/typescript-config/public/tsconfig.json"
 }
