--- a/package.json
+++ b/package.json
@@ -19,10 +19,9 @@
     "lint": "eslint ."
   },
   "peerDependencies": {
-    "i18next": "^22.0.2",
+    "i18next": "^23.4.9",
     "react": "^18.2.0",
-    "react-i18next": "^12.2.0",
-    "typescript": "^4.9.5"
+    "react-i18next": "^13.2.2"
   },
   "devDependencies": {
     "@digabi/eslint-config": "^2.0.1",
@@ -38,12 +37,12 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
-    "i18next": "^22.0.2",
+    "i18next": "^23.4.9",
     "less-loader": "^11.1.0",
     "mini-css-extract-plugin": "^2.7.2",
     "prettier": "^2.8.4",
     "react": "^17.0.2",
-    "react-i18next": "^12.2.0",
+    "react-i18next": "^13.2.2",
     "typescript": "^4.9.5"
   }
 }
