Fix tsc compiling

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,7 @@
 {
-  "extends": "@digabi/typescript-config/public/tsconfig.json"
+  "extends": "@digabi/typescript-config/public/tsconfig.json",
+  "compilerOptions": {
+    "outDir": "lib",
+    "noEmit": false
+  }
 }
