Add creating declarations to tsconfig, so that types would also be exported

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "extends": "@digabi/typescript-config/public/tsconfig.json",
   "compilerOptions": {
     "outDir": "lib",
-    "noEmit": false
+    "noEmit": false,
+    "declaration": true,
+    "declarationMap": true
   }
 }
