--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "peerDependencies": {
     "i18next": "^23.4.9",
     "react": "^18.2.0",
-    "react-i18next": "^13.0.0 | ^14.0 | ^15.0"
+    "react-i18next": "^15.4.0"
   },
   "devDependencies": {
     "@digabi/eslint-config": "^2.0.1",
