--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "peerDependencies": {
     "i18next": "^23.4.9",
     "react": "^18.2.0",
-    "react-i18next": "^13.2.2"
+    "react-i18next": "^13.0.0 || ^14.0.0 || ^15.0.0"
   },
   "devDependencies": {
     "@digabi/eslint-config": "^2.0.1",
@@ -39,7 +39,7 @@
     "mini-css-extract-plugin": "^2.7.2",
     "prettier": "^3.0.0",
     "react": "^18.2.0",
-    "react-i18next": "^13.2.2",
+    "react-i18next": "^15.4.0",
     "typescript": "^5.0.2"
   }
 }
