--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "lint": "eslint ."
   },
   "peerDependencies": {
-    "i18next": "^23.4.9",
+    "i18next": "^23.4.9 || ^24.0.0 || ^25.0.0",
     "react": "^18.2.0",
-    "react-i18next": "^13.0.0 || ^14.0.0 || ^15.0.0"
+    "react-i18next": "^13.0.0 || ^14.0.0 || ^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
     "@digabi/eslint-config": "^2.0.1",
