Disable major version updates for packages that require much work, applied with dependabot-ctl repo

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -19,3 +19,22 @@ updates:
       default-days: 7
       exclude:
         - "@digabi/*"
+    ignore:
+      - dependency-name: react
+        update-types:
+          - version-update:semver-major
+      - dependency-name: '@types/react'
+        update-types:
+          - version-update:semver-major
+      - dependency-name: react-dom
+        update-types:
+          - version-update:semver-major
+      - dependency-name: '@types/react-dom'
+        update-types:
+          - version-update:semver-major
+      - dependency-name: eslint
+        update-types:
+          - version-update:semver-major
+      - dependency-name: eslint-plugin-mocha
+        update-types:
+          - version-update:semver-major
